Revision history for CPAN-Mini-Inject

0.28    ????/??/??
        - Skip tests that are unreliable under a DNS regime where any
          hostname resolves.

0.27    2010/01/28
        All the following are thanks to Jozef Kutej <jozef@kutej.net>:

        - --discover-packages option added to parse .pm files inside
          --file and extract package names andV versions.

        - allow CHECKSUMS signing.

        - keep just last added module version in 02packages.details.txt.

0.26    2009/06/15
        - Specify minimum File::Path version

0.25    2009/05/29
        - Move to GitHub

0.24    2009/05/10
        - Made tests use a port (11027) other than 8080 to avoid clashes
          with existing services.

0.23    2008/10/25
        - Rebundled to remove OS X extended attributes that were causing
          tests to fail.

0.22    2008/06/25
        - fixed a bug where authors were being added
          more than once to 01mailrc.txt.gz

0.21    2008/06/25
        - changes for RT bug 17386 by: David Bartle

0.20    2008/06/25
        - added a command line option '--all-in-meta' which will
          parse the META.yml and index every module listed in the
          'provides' section
        - module name and version is now parsed correctly from the 
          filename if relative or absolute paths are specified
        - changes for RT bug 37093 by: David Bartle

0.18.1  2008/06/25
        - Fixed bug number 28363
          http://rt.cpan.org/Ticket/Display.html?id=28363

0.18    2005/04/02
        - Fixed bug number 11718 involving the Line-Count in 
          02packages.details.txt.gz not being updated.
        - Added tests for update_mirror method.
        - Migrated tests to HTTP::Server::Simple.

0.16    2005/01/08
        - Decreased the size of t/read/authors/01mailrc.txt.gz reducing
          greatly the size of the package.
        - More problems discovered with exception testing. Moved all